# myCompactDocu

./: .gitignore  README.md  analysis_result.txt  analyze_excel.py  app.py  compactDocu.db  corrected_mapping.xlsx  cute_docu_shelf.db  debug_categories.py  debug_details.py  debug_header.py  debug_more_sheets.py  debug_parsing.py  debug_report_mappings_dump.csv  debug_specific.py  export_mappings.py  find_and_read_report.py  inspect_db_mappings.py  inspect_mapping.py  inspect_ref.py  inspect_report_sheet.py  inspect_sheet1.py  install.bat  list_sheets.py  pyproject.toml  read_headers.py  repair_mappings.py  repair_mappings_debug.py  repair_mappings_final.py  repair_mappings_robust.py  requirements.txt  start.bat  stop.bat  test_importer.py  test_mapping_import.py  test_sync.py  verify_logic.py  verify_output.txt
backend/: create_report_template.py  database.py  db_init.py  main.py  migrate_from_excel.py  models.py  requirements.txt  schemas.py
backend/routers/: companies.py  contracts.py  exit_passes.py  item_companies.py  items.py  reports.py  transactions.py
backend/services/: excel_report_service.py  import_service.py  print_service.py  report_service.py
backend/templates/: report_template.xlsx
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
images/: README.md
ref/: 25년_08월_부산물 매각 및 폐기물 처리현황_돔황쳐_2.xlsx  반출증_2025011 새버젼.xlsx  반출증_Template.xlsx
src/: database.py  exporter.py  init_db.py  main.py  migrate_db.py  models.py  utils.py
src/importers/: base.py  (+2 more)
(+22 files in other folders)
