[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compact_docu"
version = "0.1.0"
description = "A Streamlit-based document management system"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "pandas",
    "openpyxl",
    "psycopg2-binary",
    "sqlalchemy"
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["database", "exporter", "importer", "main", "models"]
